# bpy-build

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  justfile  mypy.ini  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: main.yml
bpy_addon_build/: __init__.py  actions.py  args.py  build_context.py  config.py  create_project.py  hooks.py  util.py  yaml_conf.py
bpy_addon_build/api/: __init__.py
bpy_addon_build/build_context/: build.py  core.py  hook_definitions.py  hooks.py  install.py
bpy_addon_build/built_in_actions/: extension.py
bpy_addon_build/create_cli/: __init__.py  action.py  args.py  project.py  util.py
bpy_addon_build/create_cli/args/: __init__.py  command_classes.py  create_arguments.py
bpy_addon_build/create_cli/templates/: action.py.jinja  hello_world.py.jinja
bpy_build/: __init__.py  yaml_conf.py
docs/: actions.md  config.md  getting-started.md  mcprep-first.md  tests.md
lib_bpybuild_ext/: README.md  __init__.py  compat.py  manifest.py  verify.py
src/: main.rs
test/: bpy-build.yaml  default.py  dev.py  mcprep_tests.py  tests.py
test/mcprep-patches/: build_pot_prebuild.patch
test/test_addon/: bpy-build.yaml  default.py  dev.py
test/test_extension/: bpy-build.yaml  old.py
test/test_legacy_extension/: bpy-build.yaml  default.py  dev.py
