[package]
name = "bpy-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
clap_complete = "4.3.2"
serde = { version = "1.0.174", features = ["derive"] }
serde_yaml = "0.9.25"
