[tool.poetry]
name = "bpy-addon-build"
version = "0.4.0"
description = "A build system to make building and testing Blender addons 10 times easier"
authors = ["StandingPad"]
license = "BSD-3-Clause"
homepage = "https://github.com/StandingPadAnimations/bpy-build"

[tool.poetry.dependencies]
python = ">=3.8"
attrs = "^23.1.0"
pyyaml = "^6.0.1"
cattrs = "^23.2.3"
rich = "^13.7.0"
typeguard = "^4.1.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
types-pyyaml = "^6.0.12.11"
ruff = "^0.3.4"
gitpython = "^3.1.43"

[tool.poetry.scripts]
bab = "bpy_addon_build:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
